moved styling to CSS

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 <body>
 
   <!--Special color input (weirdly only works when I declare it in index.html)-->
-  <input class="jscolor" style="display:none;">
+  <input class="jscolor formInput" style="display:none;">
 
 
 </body>
